--- a/src/main.html
+++ b/src/main.html
@@ -25,12 +25,16 @@
     </div>
 
     <main class="page__content">
-        <section class="main-banner">
-            <picture>
-                <source srcset="images/content/main_banner/banner_desktop.svg" media="(min-width: 1024px)">
-                <img src="images/content/main_banner/banner_mobile.svg" alt="">
-            </picture>
-        </section>
+        <div class="container">
+            <section class="main-banner">
+                <picture>
+                    <source srcset="images/content/main_banner/banner_desktop.svg" media="(min-width: 1024px)">
+                    <img src="images/content/main_banner/banner_mobile.svg" alt="">
+                </picture>
+            </section>
+
+            //= template/request_form.html
+        </div>
     </main>
 
     //= template/common/footer.html
