reviews + blog + popups

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -289,7 +289,7 @@
                     <div class="catalog__top-block">
                         <h2 class="catalog__title">Проекты <small>1 114 проектов</small></h2>
 
-                        <div class="catalog__sort-block">
+                        <div class="sort-block">
                             <div class="combobox mobile-hide">
                                 <div class="combobox__title">На странице</div>
 
