--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -637,19 +637,30 @@
 
             <section class="page__section">
                 <h2 class="text-center">Наши преимущества</h2>
+
+                //= template/features.html
             </section>
 
             <section class="page__section">
                 <h2>Прайс</h2>
+
+                //= template/trans-table.html
             </section>
 
             <section class="page__section page__section--bg">
                 <div class="tabs">
                     <div class="title-block">
-                        <h2>Отзывы наших клиентов</h2>
+                        <div class="tabs__title is-active" data-tab="1">
+                            <h2>Отзывы наших клиентов</h2>
+                        </div>
+
+                        <div class="tabs__title" data-tab="2">
+                            <h2>Нам доверяют</h2>
+                            <p>Мы гордимся сотрудничеством с ведущими компаниями</p>
+                        </div>
 
                         <div class="tabs-nav">
-                            <button class="js-tabs-button tabs-nav__button is-active" type="button" data-tab="1">Отзывы клиентов</button>
+                            <button class="js-tabs-button tabs-nav__button is-active" type="button" data-tab="1">Отзывы <span class="mobile-hidden"> клиентов</span></button>
                             <button class="js-tabs-button tabs-nav__button" type="button" data-tab="2">Нам доверяют</button>
                         </div>
                     </div>
