--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -106,6 +106,14 @@
                 //= template/services-cards-slider.html
             </section>
 
+            <section class="page__section">
+                //= template/faq.html
+            </section>
+
+            <section class="page__section">
+                //= template/stages.html
+            </section>
+
             //= template/request_form.html
         </div>
     </main>
