--- a/src/main.html
+++ b/src/main.html
@@ -40,7 +40,7 @@
             </section>
 
             <section class="page__section">
-                <div class="content-block content-block--type_1">
+                <div class="content-block content-block--type_1 content-block--reverse">
                     <div class="content-block__image">
                         <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
                     </div>
@@ -96,6 +96,24 @@
                 <h2>Услуги</h2>
 
                 //= template/services-cards-slider.html
+            </section>
+
+            <section class="page__section">
+                <h2 class="text-center-desktop">Результаты, которые говорят сами за себя</h2>
+
+                //= template/cases-slider.html
+
+                <div class="arrow-button-block">
+                    <a class="arrow-button" href="#">
+                        <span>Посмотреть все кейсы</span>
+
+                        <span class="arrow-button__icon">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#chevron_right_24" />
+                            </svg>
+                        </span>
+                    </a>
+                </div>
             </section>
 
             <section class="page__section">
