--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -80,7 +80,7 @@
                             </div>
                         </div>
 
-                        <button class="service-banner__button button button--dark button--h_56" type="button">
+                        <button class="service-banner__button button button--dark button--h_56" type="button" data-fancybox="request_service_detail" data-src="#request">
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#report_icon" />
                             </svg>
