--- a/src/about.html
+++ b/src/about.html
@@ -39,6 +39,34 @@
     <main class="page__content">
         <div class="container">
             <section class="page__section">
+                <div class="content-block content-block--type_3">
+                    <h1>О компании</h1>
+
+                    <div class="content-block__slider">
+                        //= template/single-slider.html
+                    </div>
+
+                    <div class="content-block__text">
+                        <p>С развитием технологий каждое новое открытие становится значительным шагом вперёд. Современные решения находят применение в различных сферах жизни, улучшая качество и ускоряя процессы. Важно быть в курсе последних
+                            тенденций, чтобы не упустить новые возможности.</p>
+
+                        <blockquote>
+                            <p>Каждая область предлагает уникальные испытания и награды. Вас ждут приключения, где каждый шаг открывает нечто новое!</p>
+                        </blockquote>
+
+                        <p><b>Наши преимущества</b></p>
+
+                        <ul class="bullet bullet--type_1">
+                            <li>Полный цикл разработки</li>
+                            <li>Гибкая и вовлечённая команда</li>
+                            <li>Фокус на результат и масштаб</li>
+                            <li>Игры с высоким потенциалом</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="page__section">
                 <div class="content-block content-block--type_1">
                     <div class="content-block__image">
                         <img src="images/content/content_blocks/img_5.png" srcset="images/content/content_blocks/img_5@2x.png 2x" alt="">
@@ -58,6 +86,12 @@
                             и адаптация к изменениям — залог успешного будущего.</p>
                     </div>
                 </div>
+            </section>
+
+            <section class="page__section">
+                <h2 class="text-center">Наши преимущества</h2>
+
+                //= template/features.html
             </section>
 
             <section class="page__section">
@@ -98,6 +132,36 @@
                     </div>
                 </div>
             </section>
+
+            <section class="page__section">
+                <div class="content-block content-block--type_3">
+                    <div class="content-block__slider">
+                        //= template/single-slider.html
+                    </div>
+
+                    <div class="content-block__text">
+                        <p>С развитием технологий каждое новое открытие становится значительным шагом вперёд. Современные решения находят применение в различных сферах жизни, улучшая качество и ускоряя процессы. Важно быть в курсе последних
+                            тенденций, чтобы не упустить новые возможности.</p>
+
+                        <blockquote>
+                            <p>Никогда не стойте на месте. Идите вперед, даже если путь кажется трудным. Главное — не останавливаться и верить в успех!</p>
+                        </blockquote>
+
+                        <p><b>Ключевые особенности</b></p>
+
+                        <ul class="bullet bullet--type_1">
+                            <li>Генерация процедурных подземелий</li>
+                            <li>Глубокая кастомизация персонажа (100+ комбинаций навыков)</li>
+                            <li>PvP-арены с системой сезонных рейтингов</li>
+                            <li>Адаптивный ИИ противников</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="page__section">
+                //= template/request_form.html
+            </section>
         </div>
     </main>
 
@@ -107,6 +171,7 @@
 
     //= template/common/scripts.html
 
+    <script src="js/single_slider.js"></script>
     <script src="js/big_cards_slider.js"></script>
     <script src="js/persons_slider.js"></script>
 </body>
