--- a/src/ui.html
+++ b/src/ui.html
@@ -173,6 +173,14 @@
             <br><br>
 
             //= template/banners/banner_2.html
+
+            <br><br>
+
+            //= template/banners/banner_3.html
+
+            <br><br>
+
+            //= template/banners/banner_4.html
         </div>
     </div>
 
