--- a/src/about.html
+++ b/src/about.html
@@ -89,9 +89,27 @@
             </section>
 
             <section class="page__section">
+                <h2>Миссия</h2>
+
+                //= template/banners/banner_4.html
+            </section>
+
+            <section class="page__section">
+                <h2>Обращение СЕО и членов команды</h2>
+
+                //= template/speech-cards-slider.html
+            </section>
+
+            <section class="page__section">
                 <h2 class="text-center">Наши преимущества</h2>
 
                 //= template/features.html
+            </section>
+
+            <section class="page__section">
+                <h2>Галерея</h2>
+
+                //= template/gallery-slider.html
             </section>
 
             <section class="page__section">
@@ -172,6 +190,8 @@
     //= template/common/scripts.html
 
     <script src="js/single_slider.js"></script>
+    <script src="js/speech_slider.js"></script>
+    <script src="js/gallery_slider.js"></script>
     <script src="js/big_cards_slider.js"></script>
     <script src="js/persons_slider.js"></script>
 </body>
